[tool.poetry]
name = "inbasu-ru"
version = "0.1.0"
description = ""
authors = ["Inbasu <just.me.juncy@gmail.com>"]
readme = "README.md"
packages = [{include = "inbasu"}]

[tool.poetry.dependencies]
python = "3.9.20"
fastapi = {extras = ["standard"], version = "^0.115.0"}
SQLAlchemy = "^2.0.35"
aiomysql = "^0.2.0"
cryptography = "^43.0.1"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
pytest-asyncio = "^0.24.0"
pre-commit = "^3.8.0"
coverage = "^7.6.1"
aiosqlite = "^0.20.0"
httpx = "^0.27.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


